--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -622,6 +622,7 @@
     "phone_test": "Thêm số test",
     "inPhone_test": "Nhập số điện thoại test",
     "total_quota": "Tổng tin",
+    "total_money_quota": "Tổng tiền",
     "status": "Trạng thái",
     "create_date": "Thời gian tạo"
   },
